[package]
edition.workspace = true
license.workspace = true
name = "pixi-build-backend"
version = "0.1.7"

[features]
default = ["rustls-tls"]
# Use rustls for TLS (pure Rust implementation)
rustls-tls = ["rattler-build/rustls-tls"]
# Use native-tls/OpenSSL for TLS
native-tls = ["rattler-build/native-tls"]

[dependencies]
async-trait = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
clap-verbosity-flag = { workspace = true }
fs-err = { workspace = true }
indexmap = { workspace = true }
itertools = { workspace = true }
miette = { workspace = true }
minijinja = { workspace = true }
ordermap = { workspace = true }
pathdiff = { workspace = true }
rattler-build = { workspace = true }
rattler_conda_types = { workspace = true }
rattler_digest = { workspace = true }
rattler_virtual_packages = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true }

pixi_build_types = { workspace = true }

jsonrpc-core = { workspace = true }
jsonrpc-http-server = { workspace = true }
jsonrpc-stdio-server = { workspace = true }
recipe-stage0 = { workspace = true }


[dev-dependencies]
insta = { version = "1.42.1", features = ["yaml", "redactions", "filters"] }
toml = { version = "0.9.0" }

[package.metadata.cargo-shear]
ignored = ["async-trait"]
