[package]
edition.workspace = true
license.workspace = true
name = "pixi-build-mojo"
version = "0.1.7"

[features]
default = ["rustls-tls"]
native-tls = ["pixi-build-backend/native-tls", "rattler-build/native-tls"]
rustls-tls = ["pixi-build-backend/rustls-tls", "rattler-build/rustls-tls"]

[dependencies]
async-trait = { workspace = true }
fs-err = { workspace = true }
indexmap = { workspace = true }
miette = { workspace = true }
minijinja = { workspace = true }
rattler-build = { workspace = true }
rattler_conda_types = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["macros"] }

pixi-build-backend = { workspace = true }
pixi_build_types = { workspace = true }

recipe-stage0 = { workspace = true }

[dev-dependencies]
insta = { workspace = true, features = ["yaml", "redactions", "filters"] }
rstest = { workspace = true }
