[package]
authors.workspace = true
description = "A package management and workflow tool"
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "pixi"
readme.workspace = true
repository.workspace = true
version = "0.53.0"

[features]
default = ["rustls-tls"]
native-tls = ["pixi_cli/native-tls"]
# run tests connecting to remote Internet services
online_tests = ["pixi_cli/online_tests"]
rustls-tls = ["pixi_cli/rustls-tls"]
self_update = ["pixi_cli/self_update"]
slow_integration_tests = ["pixi_cli/slow_integration_tests"]
tokio-console = ["pixi_cli/tokio-console", "tokio/tracing"]

# This feature enables performance optimizations but at the cost of increased
# compile times. By default, it is only used when building the release binary.
performance = ["pixi_allocator"]

[dependencies]
miette = { workspace = true, features = ["fancy-no-backtrace"] }
pixi_allocator = { workspace = true, optional = true }
pixi_cli = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal"] }
