[package]
description = "A crate that provides the best memory allocator for different platforms"
name = "pixi_allocator"
version = "0.1.0"

[lib]
doctest = false

[dependencies]

[target.'cfg(all(target_os = "windows"))'.dependencies]
mimalloc = { version = "0.1.43" }

[target.'cfg(all(not(target_os = "windows"), not(target_os = "openbsd"), not(target_os = "freebsd"), any(target_arch = "x86_64", target_arch = "aarch64", target_arch = "powerpc64")))'.dependencies]
tikv-jemallocator = { version = "0.6.0" }
