[package]
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "pixi_api"
readme.workspace = true
repository.workspace = true
version = "0.1.0"

[dependencies]
console = { workspace = true }
dunce = { workspace = true }
fancy_display = { workspace = true }
fs-err = { workspace = true }
indexmap = { workspace = true }
itertools = { workspace = true }
miette = { workspace = true }
minijinja = { workspace = true }
pixi_config = { workspace = true }
pixi_consts = { workspace = true }
pixi_core = { workspace = true }
pixi_manifest = { workspace = true }
pixi_spec = { workspace = true }
pixi_utils = { workspace = true }
rattler_conda_types = { workspace = true }
same-file = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["fs"] }
tracing = { workspace = true }
url = { workspace = true }
uv-normalize = { workspace = true }
