[package]
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "pixi_api"
readme.workspace = true
repository.workspace = true
version = "0.1.0"

[features]
default = []
native-tls = ["rattler_repodata_gateway/native-tls"]
rustls-tls = ["rattler_repodata_gateway/rustls-tls"]

[dependencies]
console = { workspace = true }
dunce = { workspace = true }
fancy_display = { workspace = true }
fs-err = { workspace = true }
indexmap = { workspace = true }
itertools = { workspace = true }
miette = { workspace = true }
minijinja = { workspace = true }
pep508_rs = { workspace = true }
pixi_config = { workspace = true }
pixi_consts = { workspace = true }
pixi_core = { workspace = true }
pixi_manifest = { workspace = true }
pixi_pypi_spec = { workspace = true }
pixi_spec = { workspace = true }
pixi_utils = { workspace = true }
pixi_uv_conversions = { workspace = true }
pypi_modifiers = { workspace = true }
rattler_conda_types = { workspace = true }
rattler_lock = { workspace = true }
rattler_repodata_gateway = { workspace = true, features = [
  "sparse",
  "gateway",
] }
regex = { workspace = true }
same-file = { workspace = true }
serde = { workspace = true, features = ["derive"] }
strsim = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["fs"] }
tracing = { workspace = true }
url = { workspace = true }
uv-distribution = { workspace = true }
uv-distribution-types = { workspace = true }
uv-normalize = { workspace = true }
uv-types = { workspace = true }
