[package]
authors.workspace = true
description = "Authentication utilities for pixi"
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "pixi_auth"
readme.workspace = true
repository.workspace = true
version = "0.1.0"

[features]
default = ["rustls"]
native-tls = ["rattler_networking/native-tls"]
rustls = ["rattler_networking/rustls"]

[dependencies]
pixi_config = { workspace = true }
rattler_networking = { workspace = true, features = ["system-integration"] }
tracing = { workspace = true }
