[package]
edition = "2021"
name = "pixi_bench"
version = "0.1.0"

[dev-dependencies]
clap = { workspace = true }
criterion = { version = "3.0.5", package = "codspeed-criterion-compat", features = [
  "async",
  "async_futures",
  "async_tokio",
] }
fs-err = "2.11.0"
miette = { workspace = true, features = ["fancy-no-backtrace"] }
once_cell = "1.19"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.0"
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.0", features = ["v4"] }

# Pixi crates for direct API usage
pixi_cli = { path = "../pixi_cli" }
pixi_config = { path = "../pixi_config" }
pixi_core = { path = "../pixi_core" }
pixi_global = { path = "../pixi_global" }
pixi_manifest = { path = "../pixi_manifest" }
pixi_spec = { path = "../pixi_spec" }

# Rattler crates
rattler_conda_types = { workspace = true }

[[bench]]
harness = false
name = "cold_warm_install"

[[bench]]
harness = false
name = "lock_install"


[[bench]]
harness = false
name = "task_run"


[[bench]]
harness = false
name = "global_install"

[[bench]]
harness = false
name = "clean"

[profile.release]
debug = true
