[package]
name = "pixi_build_discovery"
description = "Discover the build backend from a source tree"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

[dependencies]
dunce = { workspace = true }
itertools = { workspace = true }
miette = { workspace = true }
pathdiff = { workspace = true }
serde = { workspace = true, optional = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }

rattler_conda_types = { workspace = true }

pixi_build_type_conversions = { workspace = true }
pixi_build_types = { workspace = true }
pixi_manifest = { workspace = true }
pixi_spec = { workspace = true }
pixi_spec_containers = { workspace = true }

[dev-dependencies]
pixi_build_discovery = { path = ".", features = ["serde"] }
insta = { workspace = true, features = ["yaml", "filters", "glob", "redactions"] }