[package]
authors.workspace = true
description = "Sets up environments to use for building of pixi.toml files"
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "pixi_build_frontend"
readme.workspace = true
repository.workspace = true
version = "0.1.0"

[dependencies]
dashmap = { workspace = true }
fs-err = { workspace = true, features = ["tokio"] }
futures = { workspace = true }
itertools = { workspace = true }
jsonrpsee = { workspace = true, features = ["client"] }
miette = { workspace = true, features = ["fancy-no-backtrace", "serde"] }
pixi_build_type_conversions = { workspace = true }
pixi_build_types = { path = "../pixi_build_types" }
pixi_config = { workspace = true }
pixi_consts = { workspace = true }
pixi_manifest = { workspace = true }
pixi_progress = { workspace = true }
pixi_spec = { workspace = true }
pixi_utils = { workspace = true, features = ["rustls-tls"] }
rattler = { workspace = true }
rattler_conda_types = { workspace = true }
rattler_repodata_gateway = { workspace = true, features = ["gateway"] }
rattler_shell = { workspace = true }
rattler_solve = { workspace = true, features = ["resolvo"] }
rattler_virtual_packages = { workspace = true }
regex = { workspace = true }
reqwest-middleware = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_with = { workspace = true }
serde_yaml = { workspace = true }
sha1 = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["process", "io-std"] }
tokio-util = { workspace = true, features = ["codec"] }
tracing = { workspace = true }
url = "2.5.4"
which = { workspace = true }


[dev-dependencies]
bytes = { workspace = true }
dunce = { workspace = true }
insta = { workspace = true, features = ["yaml", "filters", "json"] }
rstest = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = [
  "process",
  "io-std",
  "rt-multi-thread",
] }
tokio-stream = { workspace = true }
tokio-util = { workspace = true, features = ["io"] }
