[package]
edition.workspace = true
license.workspace = true
name = "pixi_build_mojo"
version = "0.1.9"

[[bin]]
name = "pixi-build-mojo"
path = "src/main.rs"

[package.metadata.dist]
dist = false

[features]
default = ["rustls-tls"]
native-tls = ["pixi_build_backend/native-tls", "rattler-build/native-tls"]
rustls-tls = ["pixi_build_backend/rustls-tls", "rattler-build/rustls-tls"]

[dependencies]
async-trait = { workspace = true }
fs-err = { workspace = true }
indexmap = { workspace = true }
miette = { workspace = true }
minijinja = { workspace = true }
rattler-build = { workspace = true }
rattler_conda_types = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["macros"] }

pixi_build_backend = { workspace = true }
pixi_build_types = { workspace = true }

recipe_stage0 = { workspace = true }

[dev-dependencies]
insta = { workspace = true, features = ["yaml", "redactions", "filters"] }
rstest = { workspace = true }
